refactor: github 까지 완료